--- a/index.html
+++ b/index.html
@@ -3,12 +3,23 @@
 <head>
   <meta charset="utf-8">
   <title>Ng2WidgetWizard</title>
-  <base href="/">
+  <base href="/ng2-widget-wizard/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!--google fonts-->
+  <link href="//fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900 rel="stylesheet type="text/css">
+  <link href="//fonts.googleapis.com/css?family=Quicksand:400,300,700" rel="stylesheet" type="text/css">
+
+  <link href="/assets/css/reset.css" rel="stylesheet" type="text/css">
+
+
 </head>
 <body>
   <app-root>Loading...</app-root>
-<script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.defd4e11283d3aa66903.bundle.js"></script><script type="text/javascript" src="main.1928b2c6cc87ea4af613.bundle.js"></script></body>
+
+
+
+<script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.defd4e11283d3aa66903.bundle.js"></script><script type="text/javascript" src="main.2374d447a0c913929393.bundle.js"></script></body>
 </html>
