--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <link href="//fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900 rel="stylesheet type="text/css">
   <link href="//fonts.googleapis.com/css?family=Quicksand:400,300,700" rel="stylesheet" type="text/css">
 
-  <link href="/assets/css/reset.css" rel="stylesheet" type="text/css">
+  <link href="assets/css/reset.css" rel="stylesheet" type="text/css">
 
 
 </head>
