--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link href="//fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900 rel="stylesheet type="text/css">
   <link href="//fonts.googleapis.com/css?family=Quicksand:400,300,700" rel="stylesheet" type="text/css">
 
-  <link href="/assets/css/reset.css" rel="stylesheet" type="text/css">
+  <link href="assets/css/reset.css" rel="stylesheet" type="text/css">
 
 
 </head>
@@ -21,5 +21,5 @@
 
 
 
-<script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.defd4e11283d3aa66903.bundle.js"></script><script type="text/javascript" src="main.f9a9c0db22a0f7e8b3c4.bundle.js"></script></body>
+<script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.defd4e11283d3aa66903.bundle.js"></script><script type="text/javascript" src="main.05ffc150ca7a72779ad6.bundle.js"></script></body>
 </html>
